Added support for EHLD animated GIF and custom background